--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h2>Contact Us</h2>
   <!-- Update action with your VM IP -->
-  <form action="http://123.45.67.89/submit.php" method="POST">
+  <form action="https://olive-choosiest-finically.ngrok-free.dev/submit.php" method="POST">
     <input type="text" name="name" placeholder="Name" required><br><br>
     <input type="email" name="email" placeholder="Email" required><br><br>
     <textarea name="message" placeholder="Message"></textarea><br><br>
